[package]
name = "help_sample_runtime_block_on"
version = "0.1.0"
authors = ["Thiago Veronezi <thiago@veronezi.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperlocal = "0.7"
hyper = "0.13.8"
futures-util = "0.3.7"

[dev-dependencies]
testcontainers = "0.11.0"
tokio = { version = "0.3", features = ["full"] }
